--- a/src/components/Side/SideMenu.astro
+++ b/src/components/Side/SideMenu.astro
@@ -7,15 +7,15 @@ import SideItemCard from "./SideItemCard.astro";
 <div class="flex flex-col flex-1 gap-2">
   <div class="bg-zinc-900 rounded-lg">
     <ul>
-      <SideMenuItem href="/" iconName="carbon:home">Home</SideMenuItem>
-      <SideMenuItem href="#" iconName="carbon:search">Search</SideMenuItem>
+      <SideMenuItem href="/" iconName="carbon:home">Inicio</SideMenuItem>
+      <SideMenuItem href="/itinerario" iconName="carbon:notebook">Itinerario completo</SideMenuItem>
     </ul>
   </div>
 
   <div class="bg-zinc-900 rounded-lg flex-1">
     <ul>
-      <SideMenuItem href="#" iconName="carbon:media-library">
-        Your library
+      <SideMenuItem href="#" iconName="carbon:location-heart-filled">
+        Sitios de interes
       </SideMenuItem>
     </ul>
     <ul class="pl-2">
