--- a/src/components/Side/SideItemCard.astro
+++ b/src/components/Side/SideItemCard.astro
@@ -1,33 +1,35 @@
 ---
-import type { Playlist } from "../../lib/data";
-import InlineArtists from "../InlineArtists.astro";
-import PlayButton from "../PlayButton.astro";
-import PureInlineArtists from "../PureInlineArtists.astro";
+import type {Sitio} from "../../lib/data";
+import PlaylistCard from "../PlaylistCard.astro";
 interface Props {
-  playlist: Playlist;
+    playlist: Sitio;
 }
 
-const { playlist } = Astro.props;
+const {playlist} = Astro.props;
 ---
 
 <a
-  href={`/playlist/${playlist.id}`}
-  class="playlist-item flex group relative p-2 overflow-hidden items-center gap-5 rounded-md shadow-lg hover:shadow-xl outline-none hover:bg-zinc-500/10 focus:bg-zinc-500/50"
-  data-color={playlist.color.dark}
+        href={`/playlist/${playlist.id}`}
+        class="playlist-item flex group relative p-2 overflow-hidden items-center gap-5 rounded-md shadow-lg hover:shadow-xl outline-none hover:bg-zinc-500/10 focus:bg-zinc-500/50"
+        data-color={playlist.color.dark}
 >
-  <div class="h-12 w-12 flex-none">
-    <img
-      src={playlist.cover}
-      alt={playlist.title}
-      class="object-cover rounded h-full w-full shadow-[5px_0_30px_0px_rgba(0,0,0,0.3)]"
-    />
-  </div>
-  <div class="flex flex-auto flex-col truncate">
-    <div class="font-semibold w-full flex-none truncate">
-      {playlist.title}
+    <div class="h-12 w-12 flex-none">
+        <img
+                src={playlist.cover}
+                alt={playlist.title}
+                class="object-cover rounded h-full w-full shadow-[5px_0_30px_0px_rgba(0,0,0,0.3)]"
+        />
     </div>
-    <div class="text-gray-400 text-sm truncate flex-1">
-      <PureInlineArtists artists={playlist.artists} />
+    <div class="flex flex-auto flex-col truncate">
+        <div class="font-semibold w-full flex-none truncate">
+            {playlist.title}
+        </div>
+        <div class="flex-1 mr-2">
+
+            {playlist.badges.map(badge => (
+                    <span class=`text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full ${badge.color}`>{badge.name}</span>
+            ))}
+
+        </div>
     </div>
-  </div>
 </a>
