--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,62 @@
 ---
+import Icon from "astro-icon";
 import GreetingTitle from "../components/GreetingTitle.svelte";
 import PageHeader from "../components/PageHeader.astro";
 import PlaylistCard from "../components/PlaylistCard.astro";
 import PlaylistItemCard from "../components/PlaylistItemCard.astro";
 import Layout from "../layouts/Layout.astro";
-import { playlists, morePlaylists } from "../lib/data";
+import {itinerario, morePlaylists, sitios} from "../lib/data";
+import PlayButton from "../components/PlayButton.astro";
+
+const starter = itinerario
 ---
 
 <Layout title="Home">
-  <div
-    id="playlist-container"
-    class="relative transition-all duration-1000 bg-context"
-    style="min-height:300px;--context-color:#134e4a;"
-  >
-    <PageHeader />
-    <div class="relative z-10 px-6">
-      <GreetingTitle client:visible />
-      <div
-        class="grid gap-y-4 gap-x-6 sm:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 mt-6"
-      >
-        {playlists.map((playlist) => <PlaylistItemCard playlist={playlist} />)}
-      </div>
-    </div>
     <div
-      class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80"
+            id="playlist-container"
+            class="relative transition-all duration-1000 bg-context"
+            style="min-height:300px;--context-color:#134e4a;"
     >
+        <PageHeader/>
+        <div class="relative z-10 px-6">
+            <GreetingTitle client:visible/>
+            <div class="mt-6 w-full">
+                <a
+                        href={`/itinerario`}
+                        class="playlist-item flex group relative transition-all duration-300 overflow-hidden items-center gap-5 rounded-md shadow-lg hover:shadow-xl outline-none bg-zinc-500/30 hover:bg-zinc-500/50 focus:bg-zinc-500/50"
+                        data-color={itinerario.color.dark}
+                        transition:name=`playlist ${itinerario.id} box`
+                >
+                    <div class="h-60 w-60">
+                        <img
+                                src={itinerario.cover}
+                                alt={itinerario.title}
+                                class="object-cover h-full w-full shadow-[5px_0_30px_0px_rgba(0,0,0,0.3)]"
+                                transition:name=`playlist ${itinerario.id} image`
+                        />
+                    </div>
+                    <div class="font-bold text-5xl block" transition:name=`playlist ${itinerario.id} title`>
+                        {itinerario.title}
+                    </div>
+                    <div
+                            class={"absolute right-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300"}
+                            transition:name=`playlist ${itinerario.id} play`
+                    >
+                        <PlayButton/>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div
+                class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80"
+        >
+        </div>
     </div>
-  </div>
-  <div class="px-6 relative z-10 mt-4">
-    <h2 class="text-2xl font-bold">Made for you</h2>
-    <div class="flex flex-wrap mt-6 gap-4">
-      {morePlaylists.map((playlist) => <PlaylistCard playlist={playlist} />)}
+    <div class="px-6 relative z-10 mt-4">
+        <h2 class="text-2xl font-bold">Sitios de interes</h2>
+        <div class="flex flex-wrap mt-6 gap-4 truncate">
+            {morePlaylists.map((sitio) =>
+                    <PlaylistCard sitio={sitio}/>)}
+        </div>
     </div>
-  </div>
 </Layout>
