--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const starter = itinerario
                                 transition:name=`playlist ${itinerario.id} image`
                         />
                     </div>
-                    <div class="font-bold text-5xl block" transition:name=`playlist ${itinerario.id} title`>
+                    <div class="font-bold text-2xl ml-5 block md:text-5xl" transition:name=`playlist ${itinerario.id} title`>
                         {itinerario.title}
                     </div>
                     <div
