Responsive Index Page

--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -7,11 +7,11 @@ import Icon from "astro-icon";
   transition:name="page header"
   transition:persist
 >
-  <a
-    href="/"
-    aria-label="go back to home page"
-    class="bg-zinc-900 rounded-full inline-flex justify-center items-center h-8 w-8"
-  >
-    <Icon name="bi:chevron-left" class="h-4 w-4 -ml-0.5" />
-  </a>
+  <!--<a-->
+  <!--  href="/"-->
+  <!--  aria-label="go back to home page"-->
+  <!--  class="bg-zinc-900 rounded-full inline-flex justify-center items-center h-8 w-8"-->
+  <!--&gt;-->
+  <!--  <Icon name="bi:chevron-left" class="h-4 w-4 -ml-0.5" />-->
+  <!--</a>-->
 </div>
