--- a/src/components/PlaylistCard.astro
+++ b/src/components/PlaylistCard.astro
@@ -14,12 +14,12 @@ const {sitio} = Astro.props;
         data-color={sitio.color.dark}
         transition:name=`playlist ${sitio.id} box`
 >
-    <div class="w-40">
+    <div class="md:w-40 w-full">
         <div class="relative group mx-auto h-40 w-full flex-none shadow-lg">
             <img
                     src={sitio.cover}
                     alt={sitio.title}
-                    class="object-cover h-full w-full rounded-md shadow-[5px_0_30px_0px_rgba(0,0,0,0.3)]"
+                    class="object-cover h-full w-screen md:w-full rounded-md shadow-[5px_0_30px_0px_rgba(0,0,0,0.3)]"
                     transition:name=`playlist ${sitio.id} image`
             />
             <div
