--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,8 @@ const starter = itinerario
             class="relative transition-all duration-1000 bg-context"
             style="min-height:300px;--context-color:#134e4a;"
     >
-        <PageHeader/>
+        <div class="relative z-10 py-4 px-6 flex justify-between" transition:name="page header" transition:persist>
+        </div>
         <div class="relative z-10 px-6">
             <GreetingTitle client:visible/>
             <div class="mt-6 w-full">
