--- a/src/pages/itinerario/index.astro
+++ b/src/pages/itinerario/index.astro
@@ -33,7 +33,7 @@ import DiasList from "../../components/DiasList.astro";
             </div>
         </div>
 
-        <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100">
+        <div class="bg-zinc-900/30 mt-6 flex-1 p-2 md:p-6 blur-100">
             <div class="px-2 pt-4">
                 <DiasList/>
             </div>
