Added text in first 8 pages

--- a/src/pages/itinerario/days/day2.astro
+++ b/src/pages/itinerario/days/day2.astro
@@ -28,40 +28,26 @@ const day = dias[1]
                 </div>
             </div>
         </div>
-
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Abróchense los cinturones que despegamos.</p>
-                <p class="text-lg mt-1">Prepárense para una aventura de casi 16h de avión.</p>
-                <p class="text-lg mt-1">En este primer día lo que haremos será partir desde Tarragona al Aeropuerto de
-                    Barcelona - El
-                    Prat.</p>
-                <p class="text-lg mt-1">Una vez en el aeropuerto con las maletas llenas y ganas de llegar a Japón tocará
-                    hacer la facturación
-                    de
-                    maletas, pasar por el control de seguridad etc. Tocará subir al avión dirección a nuestro primer
-                    destino
-                    <a href="https://maps.app.goo.gl/6UfN3Kv3NNADE8RM8" class="underline decoration-sky-500 font-bold">Roma
-                        Fiumicino</a>.</p>
-                <p class="text-lg mt-1">Después de unas 2h aproximadas de vuelo, tocará esperar un rato hasta que salga
-                    nuestro próximo vuelo
-                    en
-                    dirección al Aeropuerto de <a class="underline decoration-sky-500 font-bold"
-                                                  href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6">Tokyo Haneda</a>.</p>
-                <p class="text-lg mt-1">En el vuelo de una duración aproximada de 12 horas y 30 minutos y de una escala
-                    horaria de 7 horas de
-                    diferencia, en el que atravesamos unos 10 países, todo Europa y Asia, habremos llegado al segundo
-                    día de
-                    nuestro viaje.</p>
+                <p class="text-lg mt-1">Después de tantas y tantas horas de avión deberíamos llegar a Tokio Haneda aproximadamente a las 10:40, donde tocará recoger maletas, pasar controles etc.
+                </p>
+                <p class="text-lg mt-1">Una vez ya tengamos todas nuestras pertenencias, hay que mirar cómo llegar desde el Aeropuerto a Kyoto, el trayecto son unas 2 horas y media.
+                </p>
+                <p class="text-lg mt-1">Una vez en la estación de Kyoto hay que mirar cómo ir hasta la casa, que está a unos 40 minutos a pie.
+                </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Recomendaciones para el viaje</p>
-                <p class="text-lg mt-1">· Documentación en regla, que no tengamos que dejar a nadie en Barcelona sin
-                    viaje.</p>
-                <p class="text-lg mt-1">· Cualquier clase de entretenimiento para no morirse de aburrimiento.</p>
-                <p class="text-lg mt-1">· Es muy recomendable un cojín para dormir para no llegar a Japón con
-                    tortícolis.</p>
-                <p class="text-lg mt-1">· Algo de ropa cómoda para el avión.</p>
+                <p class="text-lg font-bold mt-1">Dejo una lista de sitios que quedan cerca de casa y nos los podemos ahorrar si estamos cansados otros días:
+                </p>
+                <p class="text-lg mt-1">· Subir a la Torre de Kyoto, la mejor opción para ya dejarla vista y tener una visión desde arriba de Kyoto.
+                </p>
+                <p class="text-lg mt-1">· Calle Pontocho, es una calle peatonal famosa por su decoración nocturna llena de restaurantes.
+                <p class="text-lg mt-1">· Estación de Kyoto y alrededores, zona bastante transitada y la estación es muy bonita</p>
+                <p class="text-lg mt-1">· Gión, famoso barrio antiguo de Kyoto, hay bastante vida nocturna.
+                </p>
+                <p class="text-lg font-bold mt-1">Una vez cenados y de camino a casa estaría bien dar una vuelta por un 7Eleven.
+                </p>
             </div>
         </div>
         <div
