--- a/src/pages/itinerario/days/day7.astro
+++ b/src/pages/itinerario/days/day7.astro
@@ -28,40 +28,26 @@ const day = dias[6]
                 </div>
             </div>
         </div>
-
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Abróchense los cinturones que despegamos.</p>
-                <p class="text-lg mt-1">Prepárense para una aventura de casi 16h de avión.</p>
-                <p class="text-lg mt-1">En este primer día lo que haremos será partir desde Tarragona al Aeropuerto de
-                    Barcelona - El
-                    Prat.</p>
-                <p class="text-lg mt-1">Una vez en el aeropuerto con las maletas llenas y ganas de llegar a Japón tocará
-                    hacer la facturación
-                    de
-                    maletas, pasar por el control de seguridad etc. Tocará subir al avión dirección a nuestro primer
-                    destino
-                    <a href="https://maps.app.goo.gl/6UfN3Kv3NNADE8RM8" class="underline decoration-sky-500 font-bold">Roma
-                        Fiumicino</a>.</p>
-                <p class="text-lg mt-1">Después de unas 2h aproximadas de vuelo, tocará esperar un rato hasta que salga
-                    nuestro próximo vuelo
-                    en
-                    dirección al Aeropuerto de <a class="underline decoration-sky-500 font-bold"
-                                                  href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6">Tokyo Haneda</a>.</p>
-                <p class="text-lg mt-1">En el vuelo de una duración aproximada de 12 horas y 30 minutos y de una escala
-                    horaria de 7 horas de
-                    diferencia, en el que atravesamos unos 10 países, todo Europa y Asia, habremos llegado al segundo
-                    día de
-                    nuestro viaje.</p>
+                <p class="text-lg mt-1">Este día podemos permitirnos dormir un poco más y descansar el cuerpo.
+                </p>
+                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar Osaka, que queda a 30 minutos en tren desde Kyoto.
+                </p>
+                <p class="text-lg mt-1">Así describen Osaka la mayoría de gente de Japón: calles llenas de luces y olor a comida, ruido, gente, restaurantes con todo tipo de manjares, retrofuturismo y ese carácter afable de sus habitantes. Ōsaka es la ciudad rebelde de Japón.
+                </p>
+                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar Osaka, que queda a 30 minutos en tren desde Kyoto.
+                </p>
+                <p class="text-lg mt-1">Dato importante: en Osaka se come muy bien, para muchos japoneses es donde está la mejor comida. Guia para comer en Osaka</p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Recomendaciones para el viaje</p>
-                <p class="text-lg mt-1">· Documentación en regla, que no tengamos que dejar a nadie en Barcelona sin
-                    viaje.</p>
-                <p class="text-lg mt-1">· Cualquier clase de entretenimiento para no morirse de aburrimiento.</p>
-                <p class="text-lg mt-1">· Es muy recomendable un cojín para dormir para no llegar a Japón con
-                    tortícolis.</p>
-                <p class="text-lg mt-1">· Algo de ropa cómoda para el avión.</p>
+                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
+                <p class="text-lg mt-1">· Umeda Sky, una construcción sin ningún tipo de sentido donde se ve todo Osaka
+                </p>
+                <p class="text-lg mt-1">· Castillo de Osaka, uno de los mejores castillos de Japón, no hace falta entrar lo podemos ver desde fuera.
+                </p>
+                <p class="text-lg mt-1">· Dotonbori, barrio futurista de Osaka, parece que estás en Cyberpunk.
+                </p>
             </div>
         </div>
         <div
