--- a/src/pages/itinerario/days/day5.astro
+++ b/src/pages/itinerario/days/day5.astro
@@ -30,38 +30,24 @@ const day = dias[4]
         </div>
 
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
-            <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Abróchense los cinturones que despegamos.</p>
-                <p class="text-lg mt-1">Prepárense para una aventura de casi 16h de avión.</p>
-                <p class="text-lg mt-1">En este primer día lo que haremos será partir desde Tarragona al Aeropuerto de
-                    Barcelona - El
-                    Prat.</p>
-                <p class="text-lg mt-1">Una vez en el aeropuerto con las maletas llenas y ganas de llegar a Japón tocará
-                    hacer la facturación
-                    de
-                    maletas, pasar por el control de seguridad etc. Tocará subir al avión dirección a nuestro primer
-                    destino
-                    <a href="https://maps.app.goo.gl/6UfN3Kv3NNADE8RM8" class="underline decoration-sky-500 font-bold">Roma
-                        Fiumicino</a>.</p>
-                <p class="text-lg mt-1">Después de unas 2h aproximadas de vuelo, tocará esperar un rato hasta que salga
-                    nuestro próximo vuelo
-                    en
-                    dirección al Aeropuerto de <a class="underline decoration-sky-500 font-bold"
-                                                  href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6">Tokyo Haneda</a>.</p>
-                <p class="text-lg mt-1">En el vuelo de una duración aproximada de 12 horas y 30 minutos y de una escala
-                    horaria de 7 horas de
-                    diferencia, en el que atravesamos unos 10 países, todo Europa y Asia, habremos llegado al segundo
-                    día de
-                    nuestro viaje.</p>
+            <div class="px-2 pt-4 md:w-1/3">
+                <p class="text-lg mt-1">En nuestro tercer día por la ciudad de Kyoto iremos a ver lo más pronto posible Fushimi Inari-Taisha para luego acabar cogiendo un tren hacia Nara y ver el espectacular Tōdai-ji  y los ciervos de Nara.
+                </p>
+
             </div>
-            <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Recomendaciones para el viaje</p>
-                <p class="text-lg mt-1">· Documentación en regla, que no tengamos que dejar a nadie en Barcelona sin
-                    viaje.</p>
-                <p class="text-lg mt-1">· Cualquier clase de entretenimiento para no morirse de aburrimiento.</p>
-                <p class="text-lg mt-1">· Es muy recomendable un cojín para dormir para no llegar a Japón con
-                    tortícolis.</p>
-                <p class="text-lg mt-1">· Algo de ropa cómoda para el avión.</p>
+            <div class="px-2 pt-4 md:w-1/3">
+                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
+                <p class="text-lg mt-1">· Fushimi Inari-Taisha, atracción más visitada en Kyoto, 4km de camino de Toriis rojos.
+                </p>
+                <p class="text-lg mt-1">· Estacion de Nara, estacion a 40 min en tren.
+                <p class="text-lg mt-1">· Tōdai-ji, uno de los templos de Japón más impresionantes, cuenta dentro con uno de los budas de bronce más grandes de Japón, además está el parque repleto de ciervos originarios de Nara.
+                </p>
+                <p class="text-lg mt-1">· Kofukuji, nos va de paso para la vuelta, es un parque con su templo más famoso llamado Kofukuji.
+                </p>
+            </div>
+            <div class="px-2 pt-4 md:w-1/3">
+                <p class="text-lg mt-1">Este día posiblemente nos quede tiempo libre por la tarde así que sería volver a Kyoto y poder mirar alguna atracción que nos llame la atención.
+                </p>
             </div>
         </div>
         <div
