--- a/src/pages/itinerario/days/day6.astro
+++ b/src/pages/itinerario/days/day6.astro
@@ -28,40 +28,26 @@ const day = dias[5]
                 </div>
             </div>
         </div>
-
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Abróchense los cinturones que despegamos.</p>
-                <p class="text-lg mt-1">Prepárense para una aventura de casi 16h de avión.</p>
-                <p class="text-lg mt-1">En este primer día lo que haremos será partir desde Tarragona al Aeropuerto de
-                    Barcelona - El
-                    Prat.</p>
-                <p class="text-lg mt-1">Una vez en el aeropuerto con las maletas llenas y ganas de llegar a Japón tocará
-                    hacer la facturación
-                    de
-                    maletas, pasar por el control de seguridad etc. Tocará subir al avión dirección a nuestro primer
-                    destino
-                    <a href="https://maps.app.goo.gl/6UfN3Kv3NNADE8RM8" class="underline decoration-sky-500 font-bold">Roma
-                        Fiumicino</a>.</p>
-                <p class="text-lg mt-1">Después de unas 2h aproximadas de vuelo, tocará esperar un rato hasta que salga
-                    nuestro próximo vuelo
-                    en
-                    dirección al Aeropuerto de <a class="underline decoration-sky-500 font-bold"
-                                                  href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6">Tokyo Haneda</a>.</p>
-                <p class="text-lg mt-1">En el vuelo de una duración aproximada de 12 horas y 30 minutos y de una escala
-                    horaria de 7 horas de
-                    diferencia, en el que atravesamos unos 10 países, todo Europa y Asia, habremos llegado al segundo
-                    día de
-                    nuestro viaje.</p>
+                <p class="text-lg mt-1">Después de haber visitado Kyoto al completo, iremos a Kobe, donde sobre todo podremos disfrutar de la carne de Kobe.
+                </p>
+                <p class="text-lg mt-1">Sitios más visitados de Kobe, 3 restaurantes recomendados para comer o cenar carne y la estación de Kobe donde llegamos y volvemos.
+                </p>
+                <p class="text-lg mt-1">· Sannomiya Station, estación grande de Kobe.</p>
+                <p class="text-lg mt-1">· Chinatown de Kobe, uno de los barrios de Kobe más interesantes, donde podremos degustar algo y ver chinos en vez de japoneses.
+                </p>
+                <p class="text-lg mt-1">· Kobe Port Tower y el puerto de Kobe, una de las atracciones turísticas más interesantes de Kobe, ver el puerto de noche iluminado, dicen que es de los puertos iluminados más bonitos del mundo.
+                </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Recomendaciones para el viaje</p>
-                <p class="text-lg mt-1">· Documentación en regla, que no tengamos que dejar a nadie en Barcelona sin
-                    viaje.</p>
-                <p class="text-lg mt-1">· Cualquier clase de entretenimiento para no morirse de aburrimiento.</p>
-                <p class="text-lg mt-1">· Es muy recomendable un cojín para dormir para no llegar a Japón con
-                    tortícolis.</p>
-                <p class="text-lg mt-1">· Algo de ropa cómoda para el avión.</p>
+                <p class="text-lg font-bold mt-1">Vamos a lo importante, donde comer carne de Kobe buena y local:</p>
+                <p class="text-lg mt-1">· Steakland Kobe-kan, el más recomendable y de calidad precio maravilloso. (50 - 60€ p.p)
+                </p>
+                <p class="text-lg mt-1">· Mouriya Honten, el más conocido y más antiguo de la ciudad. (80 - 100€ p.p)
+                </p>
+                <p class="text-lg mt-1">· Oi Niku Ten, recomendado por un blog que estoy leyendo, un poco más alejado y muy buena calidad (60 - 80 €)
+                </p>
             </div>
         </div>
         <div
