--- a/src/pages/itinerario/days/day8.astro
+++ b/src/pages/itinerario/days/day8.astro
@@ -28,40 +28,21 @@ const day = dias[7]
                 </div>
             </div>
         </div>
-
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Abróchense los cinturones que despegamos.</p>
-                <p class="text-lg mt-1">Prepárense para una aventura de casi 16h de avión.</p>
-                <p class="text-lg mt-1">En este primer día lo que haremos será partir desde Tarragona al Aeropuerto de
-                    Barcelona - El
-                    Prat.</p>
-                <p class="text-lg mt-1">Una vez en el aeropuerto con las maletas llenas y ganas de llegar a Japón tocará
-                    hacer la facturación
-                    de
-                    maletas, pasar por el control de seguridad etc. Tocará subir al avión dirección a nuestro primer
-                    destino
-                    <a href="https://maps.app.goo.gl/6UfN3Kv3NNADE8RM8" class="underline decoration-sky-500 font-bold">Roma
-                        Fiumicino</a>.</p>
-                <p class="text-lg mt-1">Después de unas 2h aproximadas de vuelo, tocará esperar un rato hasta que salga
-                    nuestro próximo vuelo
-                    en
-                    dirección al Aeropuerto de <a class="underline decoration-sky-500 font-bold"
-                                                  href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6">Tokyo Haneda</a>.</p>
-                <p class="text-lg mt-1">En el vuelo de una duración aproximada de 12 horas y 30 minutos y de una escala
-                    horaria de 7 horas de
-                    diferencia, en el que atravesamos unos 10 países, todo Europa y Asia, habremos llegado al segundo
-                    día de
-                    nuestro viaje.</p>
+                <p class="text-lg mt-1">Nos levantaremos para realizar un trayecto desde Kyoto a Hiroshima, el trayecto son poco más de 1h 30min.
+                </p>
+                <p class="text-lg mt-1">Trayecto desde Kyoto a Hiroshima</p>
+                <p class="text-lg mt-1">Zona donde cayó la bomba atómica</p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Recomendaciones para el viaje</p>
-                <p class="text-lg mt-1">· Documentación en regla, que no tengamos que dejar a nadie en Barcelona sin
-                    viaje.</p>
-                <p class="text-lg mt-1">· Cualquier clase de entretenimiento para no morirse de aburrimiento.</p>
-                <p class="text-lg mt-1">· Es muy recomendable un cojín para dormir para no llegar a Japón con
-                    tortícolis.</p>
-                <p class="text-lg mt-1">· Algo de ropa cómoda para el avión.</p>
+                <p class="text-lg font-bold mt-1">Después de ver el memorial cogemos un tren para ir a ver una de las mejores islas de Japón, donde el ferry nos entra con el JR Pass.
+                </p>
+                <p class="text-lg mt-1">· Trayecto desde Hiroshima a Miyajimaguchi
+                </p>
+                <p class="text-lg mt-1">· Miyajima, isla santuario que cuenta con ciervos, un toori dentro del agua y varios templos.
+                </p>
+                <p class="text-lg mt-1">· Al acabar de ver la isla deberíamos volver a Kyoto para prepararnos para irnos.</p>
             </div>
         </div>
         <div
