Changed header and description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import SideMenu from "../components/Side/SideMenu.astro";
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Clone of Spotify with Astro View Transitions integration for fluid navigation"
+      content="Guía turística para un viaje a Japón de 2 semanas"
     />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
