--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import PlayButton from "../components/PlayButton.astro";
 const starter = itinerario
 ---
 
-<Layout title="Home">
+<Layout title="Japón en 2 semanas">
     <div
             id="playlist-container"
             class="relative transition-all duration-1000 bg-context"
