References 8 first days

--- a/src/pages/itinerario/days/day3.astro
+++ b/src/pages/itinerario/days/day3.astro
@@ -35,21 +35,21 @@ const day = dias[2]
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
-                <p class="text-lg mt-1">· Estación de Kyoto, famosa estación enorme desde donde saldremos a muchos viajes.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/FMZoRwK9Aot4SvaW9" class="underline decoration-sky-500 font-bold">Estación de Kyoto</a>, famosa estación enorme desde donde saldremos a muchos viajes.
                 </p>
-                <p class="text-lg mt-1">· Sanjūsangen-dō, templo con 1001 estatuas, nos pilla bien de camino y abre muy pronto.
-                <p class="text-lg mt-1">· Kiyomizu-dera, conjunto de templos famoso por su enorme mirador.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tnbR4DE3WVfiPUY16" class="underline decoration-sky-500 font-bold">Sanjūsangen-dō</a>, templo con 1001 estatuas, nos pilla bien de camino y abre muy pronto.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/C5YPibvhU2FbFK1y7" class="underline decoration-sky-500 font-bold">Kiyomizu-dera</a>, conjunto de templos famoso por su enorme mirador.
                 </p>
-                <p class="text-lg mt-1">· Sannenzaka y Chawanzaka, famosas calles de Kyoto.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/h17Z3XsCUVirMXgK6" class="underline decoration-sky-500 font-bold">Sannenzaka y Chawanzaka</a>, famosas calles de Kyoto.
                 </p>
-                <p class="text-lg mt-1">· Gion y Pontocho, barrio antiguo, donde podremos comer en alguno de sus restaurantes.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/nbHsRdAiNtTzSkxMA" class="underline decoration-sky-500 font-bold">Gion y Pontocho</a>, barrio antiguo, donde podremos comer en alguno de sus restaurantes.
                 </p>
-                <p class="text-lg mt-1">· Santuario Heian, santuario con un jardín y lago precioso.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/ymsc6T6kCxFk3bZg8" class="underline decoration-sky-500 font-bold">Santuario Heian</a>, santuario con un jardín y lago precioso.
                 </p>
-                <p class="text-lg mt-1">· Nanzen-ji, santuario que da comienzo al paseo de los filósofos.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/rpsQAkRaLcCTLPPn6" class="underline decoration-sky-500 font-bold">Nanzen-ji</a>, santuario que da comienzo al paseo de los filósofos.
                 </p>
-                <p class="text-lg mt-1">· Paseo de los filósofos, el mítico paseo de los cerezos.</p>
-                <p class="text-lg mt-1">· Ginkaku-ji, también conocido como el Pabellón de plata.</p>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tbRbrZPwywxdR2NH7" class="underline decoration-sky-500 font-bold">Paseo de los filósofos</a>, el mítico paseo de los cerezos.</p>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/e7smqvqMG5vhsGfE8" class="underline decoration-sky-500 font-bold">Ginkaku-ji</a>, también conocido como el Pabellón de plata.</p>
             </div>
         </div>
         <div
