--- a/src/pages/itinerario/days/day5.astro
+++ b/src/pages/itinerario/days/day5.astro
@@ -30,26 +30,23 @@ const day = dias[4]
         </div>
 
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
-            <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg mt-1">En nuestro tercer día por la ciudad de Kyoto iremos a ver lo más pronto posible Fushimi Inari-Taisha para luego acabar cogiendo un tren hacia Nara y ver el espectacular Tōdai-ji  y los ciervos de Nara.
+            <div class="px-2 pt-4 md:w-1/2">
+                <p class="text-lg mt-1">Nos levantaremos para realizar un trayecto desde <a href="" class="underline decoration-sky-500 font-bold">Kyoto a Hiroshima</a>, el trayecto son poco más de 1h 30min.
                 </p>
-
+                <p class="text-lg mt-1"><a href="" class="underline decoration-sky-500 font-bold">Trayecto desde Kyoto a Hiroshima</a></p>
+                <p class="text-lg mt-1"><a href="" class="underline decoration-sky-500 font-bold">Zona donde cayó la bomba atómica</a></p>
             </div>
-            <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
-                <p class="text-lg mt-1">· Fushimi Inari-Taisha, atracción más visitada en Kyoto, 4km de camino de Toriis rojos.
+            <div class="px-2 pt-4 md:w-1/2">
+                <p class="text-lg font-bold mt-1">Después de ver el memorial cogemos un tren para ir a ver <a href="" class="underline decoration-sky-500 font-bold">una de las mejores islas de Japón</a>, donde el ferry nos entra con el JR Pass.
                 </p>
-                <p class="text-lg mt-1">· Estacion de Nara, estacion a 40 min en tren.
-                <p class="text-lg mt-1">· Tōdai-ji, uno de los templos de Japón más impresionantes, cuenta dentro con uno de los budas de bronce más grandes de Japón, además está el parque repleto de ciervos originarios de Nara.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Trayecto desde Hiroshima a Miyajimaguchi</a>
                 </p>
-                <p class="text-lg mt-1">· Kofukuji, nos va de paso para la vuelta, es un parque con su templo más famoso llamado Kofukuji.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Miyajima</a>, isla santuario que cuenta con ciervos, un toori dentro del agua y varios templos.
                 </p>
-            </div>
-            <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg mt-1">Este día posiblemente nos quede tiempo libre por la tarde así que sería volver a Kyoto y poder mirar alguna atracción que nos llame la atención.
-                </p>
+                <p class="text-lg mt-1">· Al acabar de ver la isla deberíamos volver a Kyoto para prepararnos para irnos.</p>
             </div>
         </div>
+
         <div
                 class="absolute h-screen inset-0 z-[-1] bg-gradient-to-b from-context"
                 style=`--context-color:${day.color.accent}`
