--- a/src/pages/itinerario/days/day4.astro
+++ b/src/pages/itinerario/days/day4.astro
@@ -31,24 +31,24 @@ const day = dias[3]
 
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">En el segundo día en Kyoto nos centraremos en madrugar e ir lo antes posible al Bosque de Bambú de Arashiyama y terminaremos viendo el Kinkaku-Ji o Pabellón Dorado.
+                <p class="text-lg mt-1">En el segundo día en Kyoto nos centraremos en madrugar e ir lo antes posible al <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6" class="underline decoration-sky-500 font-bold">Bosque de Bambú de Arashiyama</a> y terminaremos viendo el <a href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7" class="underline decoration-sky-500 font-bold">Kinkaku-Ji o Pabellón Dorado</a>.
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
-                <p class="text-lg mt-1">· Kimono Forest, una preciosa exposición de pilares cilíndricos de textiles teñidos al estilo tradicional.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/PioyM58M3sPXecGb7" class="underline decoration-sky-500 font-bold">Kimono Forest</a>, una preciosa exposición de pilares cilíndricos de textiles teñidos al estilo tradicional.
                 </p>
-                <p class="text-lg mt-1">· Barrio de Arashiyama, el barrio del oeste de Kyoto, famoso por su calle llena de restaurantes y talleres.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/3iA1x4HevBiK6iSU7" class="underline decoration-sky-500 font-bold">Barrio de Arashiyama</a>, el barrio del oeste de Kyoto, famoso por su calle llena de restaurantes y talleres.
                 </p>
-                <p class="text-lg mt-1">· Bosque de Bambú de Arashiyama, el famoso bosque de bambú, cuanto más tarde vayamos más gente habrá.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6" class="underline decoration-sky-500 font-bold">Bosque de Bambú de Arashiyama</a>, el famoso bosque de bambú, cuanto más tarde vayamos más gente habrá.
                 </p>
-                <p class="text-lg mt-1">· Tenryu-ji, templo al lado del bosque de bambú con jardín zen.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/oeKVZbkWcp16MFei6" class="underline decoration-sky-500 font-bold">Tenryu-ji</a>, templo al lado del bosque de bambú con jardín zen.
                 </p>
-                <p class="text-lg mt-1">· Gio-ji, templo para visitar en otoño con jardín de musgo y colores otoñales.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/eD28B9vNtnbcHM39A" class="underline decoration-sky-500 font-bold">Gio-ji</a>, templo para visitar en otoño con jardín de musgo y colores otoñales.
                 </p>
-                <p class="text-lg mt-1">· Ryōan-ji, templo de camino al pabellón dorado con jardines muy bonitos.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/BBfJvwnbDXZ4THfj9" class="underline decoration-sky-500 font-bold">Ryōan-ji</a>, templo de camino al pabellón dorado con jardines muy bonitos.
                 </p>
-                <p class="text-lg mt-1">· Kinkakuji o Pabellón Dorado, uno de los sitios más famosos de Kyoto.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7" class="underline decoration-sky-500 font-bold">Kinkakuji o Pabellón Dorado</a>, uno de los sitios más famosos de Kyoto.
                 </p>
             </div>
         </div>
