--- a/src/pages/itinerario/days/day6.astro
+++ b/src/pages/itinerario/days/day6.astro
@@ -30,23 +30,25 @@ const day = dias[5]
         </div>
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Después de haber visitado Kyoto al completo, iremos a Kobe, donde sobre todo podremos disfrutar de la carne de Kobe.
+                <p class="text-lg mt-1">Después de haber visitado Kyoto al 80%, iremos a <a href="" class="underline decoration-sky-500 font-bold">Kobe</a>, donde sobre todo podremos disfrutar de la carne de Kobe.
                 </p>
                 <p class="text-lg mt-1">Sitios más visitados de Kobe, 3 restaurantes recomendados para comer o cenar carne y la estación de Kobe donde llegamos y volvemos.
                 </p>
-                <p class="text-lg mt-1">· Sannomiya Station, estación grande de Kobe.</p>
-                <p class="text-lg mt-1">· Chinatown de Kobe, uno de los barrios de Kobe más interesantes, donde podremos degustar algo y ver chinos en vez de japoneses.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Sannomiya Station</a>, estación grande de Kobe.</p>
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Chinatown de Kobe</a>, uno de los barrios de Kobe más interesantes, donde podremos degustar algo y ver chinos en vez de japoneses.
                 </p>
-                <p class="text-lg mt-1">· Kobe Port Tower y el puerto de Kobe, una de las atracciones turísticas más interesantes de Kobe, ver el puerto de noche iluminado, dicen que es de los puertos iluminados más bonitos del mundo.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Kobe Port Tower y el puerto de Kobe</a>, una de las atracciones turísticas más interesantes de Kobe, ver el puerto de noche iluminado, dicen que es de los puertos iluminados más bonitos del mundo.
+                </p>
+                <p class="text-lg mt-1">Este dia podemos comer y pasear de tarde por Kobe, en el caso de que nos cansemos de Kobe, podemos ir a <a href="" class="underline decoration-sky-500 font-bold">Osaka</a> ya que es una ciudad mucho mas interesante
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Vamos a lo importante, donde comer carne de Kobe buena y local:</p>
-                <p class="text-lg mt-1">· Steakland Kobe-kan, el más recomendable y de calidad precio maravilloso. (50 - 60€ p.p)
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Steakland Kobe-kan</a>, el más recomendable y de calidad precio maravilloso. (50 - 60€ p.p)
                 </p>
-                <p class="text-lg mt-1">· Mouriya Honten, el más conocido y más antiguo de la ciudad. (80 - 100€ p.p)
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Mouriya Honten</a>, el más conocido y más antiguo de la ciudad. (80 - 100€ p.p)
                 </p>
-                <p class="text-lg mt-1">· Oi Niku Ten, recomendado por un blog que estoy leyendo, un poco más alejado y muy buena calidad (60 - 80 €)
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Oi Niku Ten</a>, recomendado por un blog que estoy leyendo, un poco más alejado y muy buena calidad (60 - 80 €)
                 </p>
             </div>
         </div>
