--- a/src/pages/itinerario/days/day7.astro
+++ b/src/pages/itinerario/days/day7.astro
@@ -32,21 +32,19 @@ const day = dias[6]
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg mt-1">Este día podemos permitirnos dormir un poco más y descansar el cuerpo.
                 </p>
-                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar Osaka, que queda a 30 minutos en tren desde Kyoto.
+                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar <a href="" class="underline decoration-sky-500 font-bold">Osaka</a>, que queda a 30 minutos en tren desde Kyoto.
                 </p>
                 <p class="text-lg mt-1">Así describen Osaka la mayoría de gente de Japón: calles llenas de luces y olor a comida, ruido, gente, restaurantes con todo tipo de manjares, retrofuturismo y ese carácter afable de sus habitantes. Ōsaka es la ciudad rebelde de Japón.
                 </p>
-                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar Osaka, que queda a 30 minutos en tren desde Kyoto.
-                </p>
-                <p class="text-lg mt-1">Dato importante: en Osaka se come muy bien, para muchos japoneses es donde está la mejor comida. Guia para comer en Osaka</p>
+                <p class="text-lg mt-1">Dato importante: en Osaka se come muy bien, para muchos japoneses es donde está la mejor comida. <a href="" class="underline decoration-sky-500 font-bold">Guia para comer en Osaka</a></p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
-                <p class="text-lg mt-1">· Umeda Sky, una construcción sin ningún tipo de sentido donde se ve todo Osaka
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Umeda Sky</a>, una construcción sin ningún tipo de sentido donde se ve todo Osaka
                 </p>
-                <p class="text-lg mt-1">· Castillo de Osaka, uno de los mejores castillos de Japón, no hace falta entrar lo podemos ver desde fuera.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Castillo de Osaka</a>, uno de los mejores castillos de Japón, no hace falta entrar lo podemos ver desde fuera.
                 </p>
-                <p class="text-lg mt-1">· Dotonbori, barrio futurista de Osaka, parece que estás en Cyberpunk.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Dotonbori</a>, barrio futurista de Osaka, parece que estás en Cyberpunk.
                 </p>
             </div>
         </div>
