--- a/src/pages/itinerario/days/day8.astro
+++ b/src/pages/itinerario/days/day8.astro
@@ -29,20 +29,24 @@ const day = dias[7]
             </div>
         </div>
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
-            <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Nos levantaremos para realizar un trayecto desde Kyoto a Hiroshima, el trayecto son poco más de 1h 30min.
+            <div class="px-2 pt-4 md:w-1/3">
+                <p class="text-lg mt-1">En nuestro utlimo por la ciudad de Kyoto iremos a ver lo más pronto posible <a href="" class="underline decoration-sky-500 font-bold">Fushimi Inari-Taisha</a> para luego acabar cogiendo un tren hacia <a href="" class="underline decoration-sky-500 font-bold">Nara</a> y ver el espectacular <a href="" class="underline decoration-sky-500 font-bold">Tōdai-ji</a> y los ciervos de Nara.
                 </p>
-                <p class="text-lg mt-1">Trayecto desde Kyoto a Hiroshima</p>
-                <p class="text-lg mt-1">Zona donde cayó la bomba atómica</p>
+
             </div>
-            <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Después de ver el memorial cogemos un tren para ir a ver una de las mejores islas de Japón, donde el ferry nos entra con el JR Pass.
+            <div class="px-2 pt-4 md:w-1/3">
+                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Fushimi Inari-Taisha</a>, atracción más visitada en Kyoto, 4km de camino de Toriis rojos.
                 </p>
-                <p class="text-lg mt-1">· Trayecto desde Hiroshima a Miyajimaguchi
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estacion de Nara</a>, estacion a 40 min en tren.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Tōdai-ji</a>, uno de los templos de Japón más impresionantes, cuenta dentro con uno de los budas de bronce más grandes de Japón, además está el parque repleto de ciervos originarios de Nara.
                 </p>
-                <p class="text-lg mt-1">· Miyajima, isla santuario que cuenta con ciervos, un toori dentro del agua y varios templos.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Kofukuji</a>, nos va de paso para la vuelta, es un parque con su templo más famoso llamado Kofukuji.
                 </p>
-                <p class="text-lg mt-1">· Al acabar de ver la isla deberíamos volver a Kyoto para prepararnos para irnos.</p>
+            </div>
+            <div class="px-2 pt-4 md:w-1/3">
+                <p class="text-lg mt-1">Este día posiblemente nos quede tiempo libre por la tarde así que sería volver a Kyoto y poder mirar alguna atracción que nos llame la atención.
+                </p>
             </div>
         </div>
         <div
