--- a/src/pages/itinerario/days/day2.astro
+++ b/src/pages/itinerario/days/day2.astro
@@ -2,6 +2,7 @@
 import {dias} from "../../../lib/data";
 import Layout from "../../../layouts/Layout.astro";
 import PageHeader from "../../../components/PageHeader.astro";
+import HeaderItinerario from "../../../components/HeaderItinerario.astro";
 const day = dias[1]
 ---
 <Layout image={day.cover} title={day.title || "404"}>
@@ -9,7 +10,7 @@ const day = dias[1]
             class="relative bg-zinc-900 min-h-full flex flex-col overflow-x-hidden rounded-lg"
             transition:name=`playlist ${day.id} box`
     >
-        <PageHeader/>
+        <HeaderItinerario/>
         <div class="flex flex-col items-center md:flex-row md:items-stretch gap-8 px-6">
             <div class="h-52 w-52 flex-none">
                 <img
