Added streets and temples lists and href to page 8

--- a/src/pages/itinerario/days/day3.astro
+++ b/src/pages/itinerario/days/day3.astro
@@ -33,9 +33,11 @@ const day = dias[2]
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg mt-1">En el primer día en Kyoto nos centraremos en la parte Este de Kyoto, siguiendo un recorrido desde la estación de Kyoto al Ginkaku-ji o Pabellón de plata.
                 </p>
+                <p class="text-lg mt-1">Pasaremos por sitios historicos de esta parte de la ciudad, como el famoso barrio de geishas y el paseo de los filosofos, que aunque no sea primavera, es muy disfrutable igual.
+                </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
+                <p class="text-lg font-bold mt-1">Esta podria ser una ruta de los lugares que visitar:</p>
                 <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/FMZoRwK9Aot4SvaW9" class="underline decoration-sky-500 font-bold">Estación de Kyoto</a>, famosa estación enorme desde donde saldremos a muchos viajes.
                 </p>
                 <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tnbR4DE3WVfiPUY16" class="underline decoration-sky-500 font-bold">Sanjūsangen-dō</a>, templo con 1001 estatuas, nos pilla bien de camino y abre muy pronto.
