--- a/src/pages/itinerario/days/day4.astro
+++ b/src/pages/itinerario/days/day4.astro
@@ -34,9 +34,11 @@ const day = dias[3]
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg mt-1">En el segundo día en Kyoto nos centraremos en madrugar e ir lo antes posible al <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6" class="underline decoration-sky-500 font-bold">Bosque de Bambú de Arashiyama</a> y terminaremos viendo el <a href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7" class="underline decoration-sky-500 font-bold">Kinkaku-Ji o Pabellón Dorado</a>.
                 </p>
+                <p class="text-lg mt-1">Esta ruta se puede hacer al reves, todo depende de que sitio nos apetece verlo menos transitado.
+                </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
+                <p class="text-lg font-bold mt-1">Esta seria una posible ruta de lo que podriamos visitar:</p>
                 <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/PioyM58M3sPXecGb7" class="underline decoration-sky-500 font-bold">Kimono Forest</a>, una preciosa exposición de pilares cilíndricos de textiles teñidos al estilo tradicional.
                 </p>
                 <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/3iA1x4HevBiK6iSU7" class="underline decoration-sky-500 font-bold">Barrio de Arashiyama</a>, el barrio del oeste de Kyoto, famoso por su calle llena de restaurantes y talleres.
