--- a/src/pages/itinerario/days/day8.astro
+++ b/src/pages/itinerario/days/day8.astro
@@ -31,13 +31,13 @@ const day = dias[7]
         </div>
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg mt-1">En nuestro utlimo por la ciudad de Kyoto iremos a ver lo más pronto posible <a href="" class="underline decoration-sky-500 font-bold">Fushimi Inari-Taisha</a> para luego acabar cogiendo un tren hacia <a href="" class="underline decoration-sky-500 font-bold">Nara</a> y ver el espectacular <a href="" class="underline decoration-sky-500 font-bold">Tōdai-ji</a> y los ciervos de Nara.
+                <p class="text-lg mt-1">En nuestro utlimo por la ciudad de Kyoto iremos a ver lo más pronto posible <a href="https://maps.app.goo.gl/2XSdVAzn9jLrub99A" class="underline decoration-sky-500 font-bold">Fushimi Inari-Taisha</a> para luego acabar cogiendo un tren hacia <a href="" class="underline decoration-sky-500 font-bold">Nara</a> y ver el espectacular <a href="" class="underline decoration-sky-500 font-bold">Tōdai-ji</a> y los ciervos de Nara.
                 </p>
-
+                <p class="text-lg mt-1">Todo lo que visitaremos en este dia esta situado en la parte sur de Kyoto</p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que visitaremos</p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Fushimi Inari-Taisha</a>, atracción más visitada en Kyoto, 4km de camino de Toriis rojos.
+                <p class="text-lg font-bold mt-1">Esta seria una posible ruta que seguiremos:</p>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/2XSdVAzn9jLrub99A" class="underline decoration-sky-500 font-bold">Fushimi Inari-Taisha</a>, atracción más visitada en Kyoto, 4km de camino de Toriis rojos.
                 </p>
                 <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estacion de Nara</a>, estacion a 40 min en tren.
                 <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Tōdai-ji</a>, uno de los templos de Japón más impresionantes, cuenta dentro con uno de los budas de bronce más grandes de Japón, además está el parque repleto de ciervos originarios de Nara.
@@ -46,7 +46,7 @@ const day = dias[7]
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg mt-1">Este día posiblemente nos quede tiempo libre por la tarde así que sería volver a Kyoto y poder mirar alguna atracción que nos llame la atención.
+                <p class="text-lg mt-1">Este día posiblemente nos quede tiempo libre por la tarde así que sería volver a Kyoto y poder mirar alguna atracción que nos haya quedado pendiente.
                 </p>
             </div>
         </div>
