--- a/src/pages/itinerario/days/day9.astro
+++ b/src/pages/itinerario/days/day9.astro
@@ -32,23 +32,29 @@ const day = dias[8]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    En este dia saldremos desde Kyoto direccion la capital de Japon, Tokyo, la ciudad mas poblada del mundo, con mas de 35 millones de personas en toda la region.
+                    En este dia saldremos desde Kyoto direccion la capital de Japon, Tokyo, la ciudad mas poblada del
+                    mundo, con mas de 35 millones de personas en toda la region.
                 </p>
                 <p class="text-lg mt-1">
-                    Tokio, la bulliciosa capital de Japón, es una metrópolis que fusiona la tecnología avanzada con la tradición milenaria, donde rascacielos imponentes conviven con santuarios antiguos y exquisitos jardines. Sus calles están llenas de vida las 24 horas del día, ofreciendo una experiencia única de gastronomía, cultura pop y una vibrante vida nocturna.
+                    Tokio, la bulliciosa capital de Japón, es una metrópolis que fusiona la tecnología avanzada con la
+                    tradición milenaria, donde rascacielos imponentes conviven con santuarios antiguos y exquisitos
+                    jardines. Sus calles están llenas de vida las 24 horas del día, ofreciendo una experiencia única de
+                    gastronomía, cultura pop y una vibrante vida nocturna.
                 </p>
-
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">En este dia iremos a Tokyo, primero a nuestra base de operacion y acaberemos en Akihabara por una razon especial.</p>
+                <p class="text-lg font-bold mt-1">En este dia iremos a Tokyo, primero a nuestra base de operacion y
+                    acaberemos en Akihabara por una razon especial.</p>
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
                 <p class="text-lg mt-1">· Ruta desde Kyoto a Tokyo en JR
                 </p>
-                <p class="text-lg mt-1">· Llegada a la base de operaciones, muy cerca de la zona de fiesta nocturna de Shinjuku y sobretodo del Gobierno Metropolitano de Tokio.
+                <p class="text-lg mt-1">· Llegada a la base de operaciones, muy cerca de la zona de fiesta nocturna de
+                    Shinjuku y sobretodo del Gobierno Metropolitano de Tokio.
                 </p>
                 <p class="text-lg mt-1">· Subir al gobierno metropolitano de Tokyo, que cuenta con un mirador gratuito
                 </p>
-                <p class="text-lg mt-1">· Akihabara, el epicentro de la cultura otaku y la electrónica en Tokio, repleto de tiendas de manga, anime, gadgets y videojuegos.</p>
+                <p class="text-lg mt-1">· Akihabara, el epicentro de la cultura otaku y la electrónica en Tokio, repleto
+                    de tiendas de manga, anime, gadgets y videojuegos.</p>
             </div>
         </div>
         <div
