--- a/src/pages/itinerario/days/day12.astro
+++ b/src/pages/itinerario/days/day12.astro
@@ -32,20 +32,29 @@ const day = dias[11]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    Es momento de visitar el barrio de Ginza famoso por sus tiendas caras y luego un paseo por el gran palacio imperial.
+                    Es momento de visitar el barrio de <a href=""
+                                                          class="underline decoration-sky-500 font-bold">Ginza</a>
+                    famoso por sus tiendas caras y luego un paseo por <a href=""
+                                                                         class="underline decoration-sky-500 font-bold">el
+                    gran palacio imperial</a>.
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
-                <p class="text-lg mt-1">· Ginza, su fantastica arquitectura y sus tiendas caras nos dejaran boqueabiertos.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Ginza</a>, su
+                    fantastica arquitectura y sus tiendas caras nos dejaran boqueabiertos.
                 </p>
-                <p class="text-lg mt-1">· Estacion central de Tokyo, la explaremos porque cuenta con muchas tiendas y restaurantes en el interior.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estacion central de
+                    Tokyo</a>, la explaremos porque cuenta con muchas tiendas y restaurantes en el interior.
                 </p>
-                <p class="text-lg mt-1">· Palacio Imperial, residencia del actual emperador de Japon.
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Palacio Imperial</a>,
+                    residencia del actual emperador de Japon.
                 </p>
-                <p class="text-lg mt-1">· Ir hasta la Torre de Tokyo y subir.
+                <p class="text-lg mt-1">· Ir hasta la <a href="" class="underline decoration-sky-500 font-bold">Torre de
+                    Tokyo</a> y subir.
                 </p>
-                <p class="text-lg mt-1">· Entrar al templo Zojoji, justo debajo de la Torre de Tokyo.
+                <p class="text-lg mt-1">· Entrar al templo <a href="" class="underline decoration-sky-500 font-bold">Zojoji</a>,
+                    justo debajo de la Torre de Tokyo.
                 </p>
             </div>
         </div>
