--- a/src/pages/itinerario/days/day14.astro
+++ b/src/pages/itinerario/days/day14.astro
@@ -32,16 +32,25 @@ const day = dias[13]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    Una muy buena visita para este dia es la isla artificial de Odaiba, situada en al bahia de Tokyo.
+                    Una muy buena visita para este dia es la isla artificial de <a href=""
+                                                                                   class="underline decoration-sky-500 font-bold">Odaiba</a>,
+                    situada en al bahia de Tokyo.
                 </p>
-                <p>Aqui visitaremos la estatua de la libertad, un gundam gigante y cojeremos un tren sin conductor.</p>
+                <p>Aqui visitaremos la <a href="" class="underline decoration-sky-500 font-bold">estatua de la
+                    libertad</a>, un <a href="" class="underline decoration-sky-500 font-bold">gundam gigante</a> y
+                    cojeremos un tren sin conductor.</p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">· Línea Yurikamome, una línea sin conductor</p>
-                <p class="text-lg font-bold mt-1">· El puente Rainbow Bridge es uno de los atractivos de Odaiba, así que
+                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Línea
+                    Yurikamome</a>, una línea sin conductor</p>
+                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">El puente
+                    Rainbow Bridge</a> es uno de los atractivos de Odaiba, así que
                     la principal manera de llegar a esta isla artificial de la bahía de Tokio.</p>
-                <p class="text-lg font-bold mt-1">· Estatua de la libertad, una replica de la estatua de la liberad.</p>
-                <p class="text-lg font-bold mt-1">· Desde 2017 hay un nuevo Gundam en Odaiba: un Gundam Unicorn (se
+                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estatua de
+                    la libertad</a>, una replica de la estatua de la liberad.</p>
+                <p class="text-lg font-bold mt-1">· Desde 2017 hay un nuevo Gundam en Odaiba: un <a href=""
+                                                                                                    class="underline decoration-sky-500 font-bold">Gundam
+                    Unicorn</a> (se
                     mueve)</p>
                 <p class="text-lg font-bold mt-1">· Por la tarde tendremos hueco para volver a ir a algun sitio que nos
                     haya gustado.</p>
