--- a/src/pages/itinerario/days/day9.astro
+++ b/src/pages/itinerario/days/day9.astro
@@ -32,7 +32,8 @@ const day = dias[8]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    En este dia saldremos desde Kyoto direccion la capital de Japon, Tokyo, la ciudad mas poblada del
+                    En este dia saldremos desde <a href="" class="underline decoration-sky-500 font-bold">Kyoto
+                    direccion la capital de Japon, Tokyo</a>, la ciudad mas poblada del
                     mundo, con mas de 35 millones de personas en toda la region.
                 </p>
                 <p class="text-lg mt-1">
@@ -43,17 +44,22 @@ const day = dias[8]
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">En este dia iremos a Tokyo, primero a nuestra base de operacion y
+                <p class="text-lg mt-1">En este dia iremos a Tokyo, primero a nuestra base de operacion y
                     acaberemos en Akihabara por una razon especial.</p>
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
-                <p class="text-lg mt-1">· Ruta desde Kyoto a Tokyo en JR
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Ruta desde Kyoto a
+                    Tokyo en JR</a>
                 </p>
-                <p class="text-lg mt-1">· Llegada a la base de operaciones, muy cerca de la zona de fiesta nocturna de
-                    Shinjuku y sobretodo del Gobierno Metropolitano de Tokio.
+                <p class="text-lg mt-1">· Llegada a la <a href="" class="underline decoration-sky-500 font-bold">base de
+                    operaciones</a>, muy cerca de la zona de fiesta nocturna de
+                    <a href="" class="underline decoration-sky-500 font-bold">Shinjuku</a> y sobretodo del Gobierno
+                    Metropolitano de Tokio.
                 </p>
-                <p class="text-lg mt-1">· Subir al gobierno metropolitano de Tokyo, que cuenta con un mirador gratuito
+                <p class="text-lg mt-1">· Subir al <a href="" class="underline decoration-sky-500 font-bold">gobierno
+                    metropolitano de Tokyo</a>, que cuenta con un mirador gratuito
                 </p>
-                <p class="text-lg mt-1">· Akihabara, el epicentro de la cultura otaku y la electrónica en Tokio, repleto
+                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Akihabara</a>, el
+                    epicentro de la cultura otaku y la electrónica en Tokio, repleto
                     de tiendas de manga, anime, gadgets y videojuegos.</p>
             </div>
         </div>
